--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -30,6 +30,7 @@
     "prepare": "tsdx build"
   },
   "devDependencies": {
+    "@types/minimatch": "^5.1.2",
     "tsdx": "^0.14.1"
   },
   "dependencies": {
