--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "include": ["src", "types"],
   "compilerOptions": {
+    "skipLibCheck": true,
+    "noEmitOnError": false,
     "declaration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
