--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -42,16 +42,22 @@
     "@sidetree/wallet": "^0.3.1-unstable.60",
     "@transmute/universal-wallet": "^0.7.0-unstable.8",
     "aws-sdk": "^2.763.0",
+    "browserify-zlib": "^0.2.0",
     "core-js": "^3.19.1",
+    "crypto-browserify": "^3.12.1",
     "express-oauth2-jwt-bearer": "^1.1.0",
     "factory.ts": "^0.5.2",
+    "https-browserify": "^1.0.0",
     "jose": "^4.5.0",
     "moment": "^2.29.1",
     "next": "^11.1.2",
+    "path-browserify": "^1.0.1",
     "react": "17.0.2",
     "react-c3js": "^0.1.20",
     "react-dom": "17.0.2",
     "react-tsparticles": "^1.35.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "web3": "^1.6.1"
   },
   "devDependencies": {
