--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -12,7 +12,7 @@
     "predev:ropsten:docker": "docker-compose -f ./docker-compose.build.yml build",
     "dev:ropsten:docker": "docker-compose -f ./docker-compose.run.yml --env-file .env.ropsten up",
     "dev": "dotenv -e .env.example:sidetree.testnet next dev",
-    "dev:ganache": "NODE_OPTIONS=--max_old_space_size=4096 dotenv -e .env.ganache next dev",
+    "dev:ganache": "NODE_OPTIONS=--max_old_space_size=4096 dotenv -e .env.quarkid next dev",
     "dev:photon": "dotenv -e .env.photon next dev",
     "dev:ropsten": "NODE_OPTIONS=--max_old_space_size=4096 dotenv -e .env.ropsten next dev",
     "test": "jest",
@@ -40,6 +40,7 @@
     "@sidetree/ethereum": "^0.3.1-unstable.60",
     "@sidetree/photon": "^0.3.1-unstable.60",
     "@sidetree/wallet": "^0.3.1-unstable.60",
+    "@sidetree/quarkid": "^0.3.1-unstable.60",
     "@transmute/universal-wallet": "^0.7.0-unstable.8",
     "aws-sdk": "^2.763.0",
     "browserify-zlib": "^0.2.0",
