--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -65,6 +65,7 @@
     "@types/react": "17.0.27",
     "dotenv-cli": "^4.1.1",
     "eslint": "7.32.0",
+    "next-transpile-modules": "^9.0.0",
     "eslint-config-next": "11.1.2",
     "events": "^3.3.0",
     "jest": "^27.4.3",
