--- a/lerna.json
+++ b/lerna.json
@@ -17,7 +17,8 @@
     "packages/ledger-qldb",
     "packages/test-vectors",
     "packages/wallet",
-    "packages/dashboard"
+    "packages/dashboard",
+    "packages/sidetree-service"
   ],
   "version": "0.3.1-unstable.60"
 }
