fix(core): provider fixed for quarkid and zk sync

--- a/lerna.json
+++ b/lerna.json
@@ -19,7 +19,7 @@
     "packages/wallet",
     "packages/dashboard",
     "packages/sidetree-service",
-    "package/ledger-zksync"
+    "packages/ledger-zksync"
   ],
   "version": "0.3.1-unstable.60"
 }
