--- a/packages/did-method-quarkid/package.json
+++ b/packages/did-method-quarkid/package.json
@@ -44,13 +44,16 @@
     "@sidetree/db": "^0.3.1-unstable.60",
     "@sidetree/did-method": "^0.3.1-unstable.60",
     "@sidetree/ethereum": "^0.3.1-unstable.60",
+    "@sidetree/ledger-zksync": "1.0.0",
     "@transmute/universal-wallet": "^0.7.0-unstable.51",
     "@truffle/hdwallet-provider": "^2.0.0",
     "dotenv": "^16.0.1",
+    "ethers": "^5.8.0",
     "factory.ts": "^1.2.0",
     "jest-environment-node": "^27.2.5",
     "mongodb": "^4.1.2",
-    "web3": "^1.2.9"
+    "web3": "^1.2.9",
+    "zksync-web3": "^0.17.1"
   },
   "gitHead": "e97862f01a5ad9845d82eb57ca46d335a98aeb8b",
   "homepage": "www.quarkid.org",
