--- a/packages/ledger-zksync/package.json
+++ b/packages/ledger-zksync/package.json
@@ -8,7 +8,6 @@
     "test": "tsdx test",
     "start": "tsdx watch",
     "build": "tsdx build",
-    "pretest": "docker-compose up -d ganache",
     "lint": "tsdx lint src",
     "lint:fix": "tsdx lint src --fix",
     "prepare": "tsdx build"
@@ -22,5 +21,8 @@
     "ethers": "^5.8.0",
     "tsdx": "^0.14.1",
     "zksync-web3": "^0.17.1"
+  },
+  "jest": {
+    "testTimeout": 6000000
   }
 }
