--- a/packages/ledger-zksync/package.json
+++ b/packages/ledger-zksync/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@sidetree/common": "latest",
     "@sidetree/core": "latest",
+    "@types/hdkey": "^2.1.0",
+    "@types/trust__keyto": "^1.0.4",
     "dotenv": "^17.2.0",
     "ethers": "^5.8.0",
     "tsdx": "^0.14.1",
