--- a/packages/ledger-zksync/tsconfig.json
+++ b/packages/ledger-zksync/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "declaration": true,
+    "downlevelIteration": true,
     "esModuleInterop": true,
     "importHelpers": true,
     "jsx": "react",
